--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
                         </ul>
                   </div>
               </div>
-            <div class="space"><button class="btn" id="btnShowData">View Results</button></div>
-            <div class="paragraph"><p>repellendus porro maiores fugit, facere ratione voluptatibus quis numquam veniam officia incidunt fuga error quas, sed aperiam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis doloribus cum eveniet dolores illo animi fugit porro, nobis quia autem adipisci esse consequatur quis nesciunt non. Iste eius molestias ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam sapiente dolores consequuntur sit iure dignissimos natus, odit laboriosam in tempora quam, neque ad reiciendis eum quasi ea quidem consequatur optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, aliquid molestias eveniet vel necessitatibus rerum facilis sunt obcaecati quae pariatur adipisci atque voluptatem tempore velit itaque doloremque praesentium, vero harum!</p></div>
-          
-            
+            <div class="space"><button class="btn" id="btnShowData">View Results</button>  </div>
+            <div class="paragraph"> <canvas id="Chart" height="300" width="400"></canvas></div>
             <div class="footer"> &copy  2021 Odeh Abuzaid | Software Development Studen @ ASAC - LTUC.</div>
             <div class="imgContainer" id ='imgContainer'>
                   <div class="img1 zoom"><img src="https://via.placeholder.com/350x280/000000" alt="" id="firstImg"></div>
@@ -56,6 +54,8 @@
                   <div class="img3 zoom"><img src="https://via.placeholder.com/350x280/000000" alt="" id="thirdImg"></div>
             </div>
           </div>
+          <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-alpha/dist/Chart.min.js"></script>
           <script src="./js/app.js"></script>
+          <!-- <script src="./js/productschart.js"></script> -->
 </body>
 </html>
