--- a/index.html
+++ b/index.html
@@ -1,61 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Buss Mall Market Analysis App</title>
-      <link rel ="stylesheet" href="./css/style.css">
-      <link rel ="stylesheet" href="./css/reset.css">
+      <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="./css/reset.css">
       <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,700;1,400&display=swap"
+            rel="stylesheet">
 </head>
+
 <body>
       <div class="container">
             <div class="header">
                   <div class="logo">
-                     <span class="title"><img src="./assets/LOGO/logo.png" alt=""> Buss-Mall</span>
-                     <span><h2>Market Analysis App</h2></span>
+                        <span class="title"><img src="./assets/LOGO/logo.png" alt=""> Buss-Mall</span>
+                        <span>
+                              <h2>Market Analysis App</h2>
+                        </span>
                   </div>
-               </div>
+            </div>
             <div class="left-sidebar">
                   <div class="white">
                         <span class="results">Products</span><br>
                         <ul id="productsUnorderedList">
-                        <li>bag</li>
-                        <li>banana</li>
-                        <li>bathroom</li>
-                        <li>boots</li>
-                        <li>breakfast</li>
-                        <li>bubblegum</li>
-                        <li>chair</li>
-                        <li>cthulhu</li>
-                        <li>dog-duck</li>
-                        <li>dragon</li>
-                        <li>pen</li>
-                        <li>pet-sweep</li>
-                        <li>scissors</li>
-                        <li>shark</li>
-                        <li>sweep</li>
-                        <li>tauntaun</li>
-                        <li>unicorn</li>
-                        <li>usb</li>
-                        <li>water-can</li>
-                        <li>wine-glass</li>
+                              <li>bag</li>
+                              <li>banana</li>
+                              <li>bathroom</li>
+                              <li>boots</li>
+                              <li>breakfast</li>
+                              <li>bubblegum</li>
+                              <li>chair</li>
+                              <li>cthulhu</li>
+                              <li>dog-duck</li>
+                              <li>dragon</li>
+                              <li>pen</li>
+                              <li>pet-sweep</li>
+                              <li>scissors</li>
+                              <li>shark</li>
+                              <li>sweep</li>
+                              <li>tauntaun</li>
+                              <li>unicorn</li>
+                              <li>usb</li>
+                              <li>water-can</li>
+                              <li>wine-glass</li>
                         </ul>
                   </div>
-              </div>
-            <div class="space"><button class="btn" id="btnShowData">View Results</button>  </div>
-            <div class="paragraph"> <canvas id="Chart" height="300" width="400"></canvas></div>
-            <div class="footer"> &copy  2021 Odeh Abuzaid | Software Development Studen @ ASAC - LTUC.</div>
-            <div class="imgContainer" id ='imgContainer'>
-                  <div class="img1 zoom"><img src="https://via.placeholder.com/350x280/000000" alt="" id="firstImg"></div>
-                  <div class="img2 zoom"><img src="https://via.placeholder.com/350x280/000000" alt="" id="secondImg"></div>
-                  <div class="img3 zoom"><img src="https://via.placeholder.com/350x280/000000" alt="" id="thirdImg"></div>
             </div>
-          </div>
-          <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-alpha/dist/Chart.min.js"></script>
-          <script src="./js/app.js"></script>
-          <!-- <script src="./js/productschart.js"></script> -->
+            <div class="imgContainer" id='imgContainer'>
+                  <img class="zoom" src="https://via.placeholder.com/350x280/000000" alt="" id="firstImg">
+                  <img class="zoom" src="https://via.placeholder.com/350x280/000000" alt="" id="secondImg">
+                  <img class="zoom" src="https://via.placeholder.com/350x280/000000" alt="" id="thirdImg">
+            </div>
+            <div class="space"><button class="btn" id="btnShowData">View Results</button> </div>
+            <div class="chart"> <canvas id="Chart" height="300" width="400"></canvas></div>
+            <div class="footer"> &copy 2021 Odeh Abuzaid | Software Development Studen @ ASAC - LTUC.</div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-alpha/dist/Chart.min.js"></script>
+      <script src="./js/app.js"></script>
+      <!-- <script src="./js/productschart.js"></script> -->
 </body>
+
 </html>
