--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                               <li>water-can</li>
                               <li>wine-glass</li>
                         </ul>
+                        <button class="btn leftside" id = "btnClearData" >Clear Data</button> 
+                        <button class="btn leftside" id = "btnRestartSurvay" >Restart </button> 
+                        <button class="btn leftside" id="btnShowData">View Results</button>
                   </div>
             </div>
             <div class="imgContainer" id='imgContainer'>
@@ -55,7 +58,7 @@
                   <img class="zoom" src="https://via.placeholder.com/350x280/000000" alt="" id="secondImg">
                   <img class="zoom" src="https://via.placeholder.com/350x280/000000" alt="" id="thirdImg">
             </div>
-            <div class="space"><button class="btn" id="btnShowData">View Results</button> </div>
+            <div class="space"> </div>
             <div class="chart"> <canvas id="Chart" height="300" width="400"></canvas></div>
             <div class="footer"> &copy 2021 Odeh Abuzaid | Software Development Studen @ ASAC - LTUC.</div>
       </div>
