--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <script src="https://cdn.jsdelivr.net/npm/chart.js@3.0.0-alpha/dist/Chart.min.js"></script>
       <script src="./js/app.js"></script>
-      <!-- <script src="./js/productschart.js"></script> -->
+      <script src="./js/productschart.js"></script>
 </body>
 
 </html>
